# rutwt

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: .dockerignore  Cargo.toml  Dockerfile
api/data/: 0000-base-schema-postgres.sql  0001-media-update-postgres.sql  createdb.sh  createdb_postgres.sh  transpile.py  transpile_all.sh
api/src/: main.rs  test.rs
api/src/controllers/: auth.rs  media.rs  mod.rs  posts.rs  users.rs
api/src/models/: audio.rs  mod.rs  photo.rs  post.rs  user.rs  video.rs
api/src/services/: media.rs
data/: 0001-media-update.sql  createdb.sh  schema.sql
sqlite2pg/: Cargo.toml
sqlite2pg/src/: lib.rs
src/: errors.rs  main.rs  test.rs
src/controllers/: auth.rs  media.rs  posts.rs  users.rs
src/models/: audio.rs  mod.rs  photo.rs  post.rs  user.rs  video.rs
src/services/: media.rs
web/: Caddyfile  Dockerfile  Dockerfile_Caddyfile  package-lock.json  package.json
web/src/: app.html
web/src/lib/: InfiniteScroll.svelte  Navbar.svelte  Post.svelte  PostForm.svelte  index.js
web/src/routes/: +layout.js  +page.js  +page.svelte
web/src/routes/[slug]/: +page.js  +page.svelte
web/src/routes/[username]/status/[id]/: +page.js  +page.svelte
web/src/routes/latest/: +page.js  +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/post/: +page.svelte
web/src/routes/register/: +page.svelte
web/src/routes/settings/: +page.svelte
web/static/: style.css
