[package]
name = "rutwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22.1"
chrono = "0.4.39"
jsonwebtoken = "9.3.1"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "net", "process", "io-util", "fs", "sync"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

[dev-dependencies]
http-body-util = "0.1.2"
serde_json = "1.0.138"
tower = "0.5.2"
